@@ -2,6 +2,7 @@ Since 0.4.1
 -----------
 
 - Fixed jetbrains completions for `::F.`
+- Made max_length on `ForeignModelByField<_, String>` implicit
 
 
 
